Updated the front end to work when the backend is in an unsecure mode.
